--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "rajarshee-portfolio",
+  "version": "1.0.0",
+  "author": {
+    "name": "Rajarshee Chatterjee",
+    "email": "rajarshee.adm@gmail.com",
+    "url": "https://github.com/rajarsheechatterjee"
+  },
   "private": true,
   "scripts": {
     "dev": "next dev",
