--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "next-mdx-remote": "^4.4.1",
     "postcss": "^8.4.35",
     "react": "18.2.0",
+    "react-activity-calendar": "^3.0.1",
     "react-dom": "18.2.0",
+    "react-github-calendar": "^5.0.0",
     "sugar-high": "^0.6.0",
     "tailwindcss": "4.0.0-alpha.13",
     "typescript": "5.3.3"
